WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223840
REGRESSION(
r274527
): [GStreamer] media/webaudio-background-playback.html now failing
https://bugs.webkit.org/show_bug.cgi?id=223840
Summary
REGRESSION(r274527): [GStreamer] media/webaudio-background-playback.html now ...
Philippe Normand
Reported
2021-03-27 08:18:26 PDT
--- /app/webkit/WebKitBuild/Release/layout-test-results/media/webaudio-background-playback-expected.txt +++ /app/webkit/WebKitBuild/Release/layout-test-results/media/webaudio-background-playback-actual.txt @@ -1,3 +1,3 @@ -PASS Ensure WebAudio stops playing in the background when the 'BackgroundProcessPlaybackRestricted' restriction is set +FAIL Ensure WebAudio stops playing in the background when the 'BackgroundProcessPlaybackRestricted' restriction is set assert_true: audio playback suspended in background expected true got false
Attachments
Patch
(4.42 KB, patch)
2021-03-28 02:53 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-03-28 02:53:18 PDT
Created
attachment 424488
[details]
Patch
EWS
Comment 2
2021-03-28 10:46:31 PDT
Committed
r275149
: <
https://commits.webkit.org/r275149
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424488
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-28 10:47:13 PDT
<
rdar://problem/75933257
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug